Changelog for Shake

    #76, add needed, to assert a need doesn't rebuild
    #78, don't use cabal in the test suite
    #77, add shakeRunCommands and --skip-commands
    #67, add withVerbosity
    #51, add getShakeOptions
    Lots of Haddock improvements
    Deprecate system', use cmd or command instead
    #53, add addPath and addEnv to modify environment variables
    Make all search path things return the native separators
    #73, if Haskell can't write a unicode filename, skip the test
    Print out the entire database in diagnostics mode
    Rewrite database writes, old code could break metadata on error
    #25, optimise building with Ninja
    Fix many bugs in FilePath.normalise
    Require QuickCheck-2.0 or higher
    Change how the makefile parser treats \ characters
    Add a --no-build flag
    #74, allow cmd to be used with result IO
    Add a Util module, with Makefile parsing
0.10.8
    Allow unix-1.5.1 again
    Require Cabal 1.10 or above
    Convert to the cabal test compatible test suite
0.10.7
    Support time-1.2
    #71, fix a bug when requesting all three outputs from command
    #64, add progressProgram and use it in progressSimple
    Remove isRunning, kill the progress thread on completion
    #47, improve the performance of ?==, especially on "//*"
    #68, improve the docs for addOracle
    #55, ensure if you need phony targets you rebuild every time
    #52, ensure all command output is printed
    #20, document preferred compilation flags
    #20, speed up the Shake executable with GHC RTS flags
    #39, print out more of the version string on database change
    #41, require unix-2.6 or above
    #48, make it clear filetimes are hashes
    #43, improve the error messages on lint failures
    #45, avoid use of nub
    #45, avoid use of intersect which is O(n^2)
    #26, add newThrottle to create throttling resources
    #26, add unsafeExtraThread to run more than shakeThreads
    #32, add a check that withResources does not call need