@@ -8,6 +8,7 @@ import Development.Shake.Core
 
 import Development.Shake.Rules.Directory
 import Development.Shake.Rules.File
+import Development.Shake.Rules.OrderOnly
 import Development.Shake.Rules.Rerun
 
 
@@ -23,5 +24,6 @@ shake opts r = do
         r
         defaultRuleFile
         defaultRuleDirectory
+        defaultRuleOrderOnly
         defaultRuleRerun
     return ()
